exports[`PieChart.js should render the clip path 1`] = `
<g
  className="pie-chart"
  clipPath="my-clip-path"
  transform="translate(50,50)" />
`;

exports[`PieChart.js should take stubbed data and do basic rendering 1`] = `
<g
  className="pie-chart"
  clipPath={undefined}
  transform="translate(50,50)" />
`;

exports[`PieChart.js should take stubbed data repositions based on padding 1`] = `
<g
  className="pie-chart"
  clipPath={undefined}
  transform="translate(60,60)" />
`;
